rhai/codegen/ui_tests/rhai_fn_bad_value.stderr
error: expecting string literal
  --> $DIR/rhai_fn_bad_value.rs:11:18
   |
11 | #[rhai_fn(name = true)]
   |                  ^^^^

error[E0433]: failed to resolve: use of undeclared crate or module `test_module`
  --> $DIR/rhai_fn_bad_value.rs:22:8
   |
22 |     if test_module::test_fn(n) {
   |        ^^^^^^^^^^^ use of undeclared crate or module `test_module`
